k8s/mwa/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: frontend-ingress
spec:
  backend:
    serviceName: frontend
    servicePort: 80
